src/App.css
.hero-container{
  background:linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
  url('./assets/hero.png') no-repeat center center/cover;
  min-height: 100vh;
  color:white;
  font-family:Arial,sans-serif;
  padding:20px 0;
  box-sizing: border-box;
  margin:0;
}

.navbar {
  position : fixed;
  top:0;
  left:0;
  width:100%;
  height:90px;
  background-color: #1a1a1a;
  display: flex;
  padding:0 50px;
  justify-content: space-between;
  align-items: center;
  box-sizing:border-box;
  z-index:10;
}

.logo-section{
  display:flex;
  align-items:center;
  gap:10px;
}

.gold-circle{
  width:50px;
  height:50px;
  background:url('./assets/logo.png') no-repeat center center/cover;
  border-radius: 50%;
  border: 2px solid goldenrod;
}

.brand-text{
  display:flex;
  flex-direction:column;
  align-items:flex-start;
}

.brand-title{
  color:goldenrod;
  font-weight:bold;
  font-size:18px;
  letter-spacing:4px;
  line-height: 1.2;
}

.brand-subtitle{
  font-size:10px;
  color:dimgrey;
}

.nav-links{
  display: flex;             
  flex-direction: row;       
  justify-content: flex-start;
  align-items: center;
  list-style: none;
  padding: 0;
  margin: 0;
  gap: 35px;
}

.nav-links li{
  margin: 0;
}

.nav-links a{
  color:white;
  text-decoration: none;
  text-transform:uppercase;
  font-size:14px;
  font-weight:700;
  transition:color 0.2s ease;
  letter-spacing: 1px;
}

.navbar .nav-links a:hover{
  color:darkgoldenrod;
}

.menu-button{
  display :none;
  background:transparent;
  border:none;
  color :white;
  font-size:30px;
  cursor:pointer;
}
@media (max-width:1024px){
  .navbar{
    padding:0 20px;
    height:88px;
  }
  .hero-container{
    padding-top:100px;
  }
  
  .menu-button{
    display:block;
    z-index:12;
  }

  .nav-links {
    display: none;
    flex-direction: column;  
    align-items: flex-start;
    position:absolute;
    top: 88px;
    left: 0;
    width: 100%;             
    padding: 20px 40px;
    margin:0;
    gap:20px;
    background-color: transparent;
    z-index:11;
    box-sizing: border-box;
  }
  .nav-links.active {
    display:flex;
    
  }

  .nav-links a {
    font-size: 16px;
    width:100%;
    display:block;
  }
}
.hero-content{
  display:flex;
  flex-direction:column;
  align-items:center;
  text-align:center;
  padding-top:90px;
}

.main-logo-image{
  width:100px;
  height:100px;
  background:url('./assets/logo.png') no-repeat center center/cover;
  border-radius:50%;
  margin-bottom:25px;
  border:2px solid goldenrod;
}

.badge{
  border:1px solid goldenrod;
  color:goldenrod;
  padding: 3px 8px;
  margin-bottom:18px;
  font-size:12px;
  letter-spacing:1px;
  background:rgb(32, 32, 38)
}

.center-title{
  font-size:40px;
  font-weight:bold;
  line-height: 1.25;
  margin-bottom:20px;
}

.golden-text{
  color:goldenrod;
}

.center-subtitle{
  color:ghostwhite;
  max-width:480px;
  font-size:13px;
  line-height:1.5;
  margin-bottom:30px;
}

.hero-buttons {
  display: flex;
  flex-direction: column;
  gap: 12px;
  width: 100%;
  max-width: 300px;
  margin: 20px auto 0 auto;
}

.hero-buttons button {
  padding: 14px;
  font-size: 16px;
  font-weight: bold;
  border-radius: 4px;
  cursor: pointer;
  transition: all 0.3s ease;
}

.btn-one{
  background-color:goldenrod;
  color:black;
  border:none;
}

.btn-one:hover{
  background-color:rgb(71, 53, 6);
}

.btn-two{
  background-color:transparent;
  color:goldenrod;
  border:1px solid goldenrod;
}

.btn-two:hover{
  background-color: rgb(71, 53, 6);
}

.stats-container{
  background-color:rgb(33, 33, 49);
  padding:40px 20px;
  border-top:1px solid goldenrod;
  border-bottom:1px solid goldenrod;
}

.stats-grid{
  display:grid;
  grid-template-columns:repeat(4,1fr);
  gap:20px;
  margin : 0 auto;
  text-align:center;
  max-width:960px;
}

.stat-box {
  padding: 15px 10px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.stat-no{
  font-size:36px;
  font-weight:bold;
  color: goldenrod;
  margin:0 0 5px 0;
}

.stat-desc{
  font-size:11px;
  color: rgb(172, 167, 167);
  letter-spacing: 1.5px;
  margin:0
}

@media(max-width:768px){
  .stats-grid{
    grid-template-columns:repeat(2,1fr);
    max-width: 500px;
  }
  .center-title{
    font-size:32px;
  }
}
.serv-container , .pro-container , .tru-container , .faq-container{
  background-color: #0b0f19; 
  color: white;
  font-family: 'Arial', sans-serif;
  padding: 20px 20px;
  display: flex;
  flex-direction: column;
  gap: 40px;
  align-items: center;
}

.serv-header-section , .pro-header-section , .tru-header-section , .faq-header-section{
  text-align: center;
  max-width: 600px;
}

.serv-gold-title , .pro-gold-title , .tru-gold-title , .faq-gold-title{
  color: goldenrod; 
  font-size: 12px;
  font-weight: bold;
  letter-spacing: 2px;
  text-transform: uppercase;
}

.serv-main-heading , .pro-main-heading , .tru-main-heading , .faq-main-heading{
  font-size: 32px;
  font-weight: bold;
  margin: 15px 0;
}

.serv-sub-heading , .pro-sub-heading , .faq-sub-heading{
  color: #8a94a6;
  font-size: 15px;
  line-height: 1.6;
  margin-bottom: 25px;
}

.start-veri-btn, .card-action-btn {
  background: linear-gradient(135deg, #e5c060, #cda343);
  color: #14192c;
  border: none;
  border-radius: 6px;
  padding: 15px 30px;
  font-size: 15px;
  font-weight: bold;
  width: 100%;
  cursor: pointer;
  transition: opacity 0.2s ease;
}

.start-veri-btn:hover, .card-action-btn:hover {
  opacity: 1;
  background: #5961c7b6;
  color: #ffd700;
  transform: scale(1.05)
}

.cards-container{
  display:flex;
  flex-direction: row;
  justify-content: center;
  gap:30px;
}
.serv-card-left, .serv-card-right {
  background-color: #1a233a; 
  border-radius: 15px;
  padding: 10px 10px;
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  width:100%

}
@media(max-width:1024px){
  .cards-container{
    flex-wrap: wrap;
  }
}

.express-badge {
  background-color: #e5c060;
  color: black;
  font-size: 10px;
  font-weight: bold;
  letter-spacing: 1px;
  padding: 4px 10px;
  border-radius: 4px;
  width: max-content;
  margin-bottom: 20px;
}

.card-main-title {
  font-size: 18px;
  font-family: 'Georgia', serif; 
  margin: 0 0 15px 0;
  line-height: 1.3;
}

.card-descrip {
  color: #8a94a6;
  font-size: 12px;
  line-height: 1.6;
  margin-bottom: 30px;
}

.checkpoints-list {
  display: flex;
  flex-direction: column;
  gap: 15px;
  margin-bottom: 35px;
  border-bottom: 1px solid goldenrod;
  padding-bottom: 25px;
  list-style:none;
  padding:0;
}

.checkpoint-item {
  font-size: 14px;
  color: #bdc6d3;
  display: flex;
  align-items: center;
  gap: 10px;
}

.checkmark {
  color: #e5c060;
  font-weight: bold;
}


.price-region-title {
  font-size: 11px;
  color: #6b778c;
  letter-spacing: 1.5px;
  margin-bottom: 15px;
}

.price-table {
  display: flex;
  flex-direction: column;
  gap: 15px;
  margin-bottom: 20px;
}

.price-row {
  display: flex;
  justify-content: space-between;
  align-items: center;
  font-size: 14px;
  padding-bottom: 12px;
  border-bottom: 1px solid rgba(255, 255, 255, 0.05);
}

.region-name {
  color: #8a94a6;
}

.region-cost {
  color: #e5c060;
  font-weight: bold;
}

.promo-text {
  color: #505f79;
  font-size: 12px;
  margin: 5px 0 25px 0;
}
.image-container{
  display:flex;
  justify-content:center;
  padding: 0 20px;
  flex-direction: column;
}
.people-image {    
    width: 500px;
    margin: 0 auto;
}
.people-container {
  font-family: 'Arial', sans-serif;
  padding: 10px 10px;
  display: flex;
  flex-direction: column;
  gap:20px;
  width: 500px;
  margin: 0 auto;
  border-bottom: solid goldenrod;
  border-top: solid goldenrod;
}
.people-title{
  color:white;
  font-size:20px;
}
.people-desc{
  color: #8a94a6;
  font-size:12px;

}
@media(max-width:600px){
  .people-container{
    width:100%;
    max-width:500px ;
  }
  .people-image{
    width:100%;
    height:auto;
    max-width:500px;
  }
  .text-container{
    width:100%;
    max-width:500px;
  }
}
.step-row {
  display: flex;
  align-items: flex-start;
  gap: 20px;
  padding: 25px;
}

.step-num {
  width: 50px;
  height: 50px;
  border: 2px solid #d4af37;
  border-radius: 50%;
  color: #d4af37;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 20px;
  font-weight: bold;
}
.step-content , .tru-content{
  display: flex;
  flex-direction: column;
  gap: 10px;
}

.step-heading , .tru-heading{
  color: white;
  font-size: 28px;
  margin: 0;
}

.step-sub-heading , .tru-sub-heading{
  color: #8a94a6;
  font-size: 18px;
  line-height: 1.6;
  margin: 0;
}
.tru-grid-container {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 20px;
  padding: 20px;
}

.tru-box {
  background-color: #0d1527;
  border: 1px solid rgba(255, 255, 255, 0.05);
  border-radius: 8px;
  padding: 20px 20px;
  display: flex;
  flex-direction: column;
  align-items: center; 
  text-align: center;
}

.tru-logo {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 60px;
  height: 60px;
  border-radius: 50%;
  border: 1.5px solid rgba(218, 165, 32, 0.4); 
  background-color: rgba(218, 165, 32, 0.03);
  color: goldenrod; 
  font-size: 20px;
  margin-bottom: 20px; 
}

.tru-heading {
  color: #ffffff;
  font-size: 18px;
  margin-bottom: 12px;
  font-family: sans-serif;
}

.tru-sub-heading {
  color: #8a99ad;
  font-size: 10px;
  line-height: 1.6;
}
.faq-list{
  margin-top:10px;
}
.faq-item{
  border-bottom: 1px solid #8a94a6; 
  padding:18px 0;
}
.faq-question{
  display:flex;
  justify-content:space-between;
  align-items:center;
  cursor:pointer;
  gap:100px;
}
.faq-question h3 {
  font-size:18px;
  color:white;
  margin:0;
  font-weight:600;
}
.faq-icon{
  color: goldenrod;
  font-size:24px;
  font-weight:bold;
}
.faq-answer{
  color:#6b778c;
  margin-top:18px;
  line-height:1.8;
  font-size:15px;
  display:flex;
  flex-direction: column;
}

